fix(core): align input groups styles
- align closer to the progressive filtering requirements

--- a/projects/elements/src/button/button.css
+++ b/projects/elements/src/button/button.css
@@ -95,8 +95,8 @@
 }
 
 :host([readonly]) {
-  --text-decoration: none !important;
-  --cursor: cursor !important;
+  --text-decoration: none;
+  --cursor: cursor;
 }
 
 :host([interaction='emphasize']) {
@@ -138,7 +138,7 @@
 
   &:host(:hover) {
     --background: transparent;
-    --text-decoration: underline !important;
+    --text-decoration: underline;
 
     [interaction-state] {
       --nve-sys-interaction-state-ratio: 0;
@@ -147,7 +147,7 @@
 
   &:host(:--active) {
     --background: transparent;
-    --text-decoration: underline !important;
+    --text-decoration: underline;
   }
 
   &:host(:--disabled) {
@@ -167,6 +167,11 @@
     [interaction-state] {
       --nve-sys-interaction-state-ratio: 0;
     }
+  }
+
+  &:host([readonly]:not(:--anchor)) {
+    --text-decoration: none;
+    --cursor: cursor;
   }
 
   &:host([interaction*='destructive']) {
