--- a/projects/elements/src/forms/control/control.css
+++ b/projects/elements/src/forms/control/control.css
@@ -1,8 +1,8 @@
 :host {
   --cursor: pointer;
   --accent-color: var(--nve-sys-accent-secondary-background);
-  --color: var(--nve-sys-text-color);
-  --label-color: var(--nve-sys-text-muted-color);
+  --color: var(--nve-sys-interaction-field-color);
+  --label-color: var(--nve-sys-interaction-field-color);
   --control-width: 200px;
   --control-height: auto;
   --_label-width: var(--label-width, 180px);
